--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@
  * user guide available at https://docs.gradle.org/2.14.1/userguide/tutorial_java_projects.html
  */
 
+group 'io.ion'
+version '1.0-SNAPSHOT'
+
+
 /*
 // Apply the java plugin to add support for Java
 apply plugin: 'java'
